# ESP32-Homekit-Temp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  ntp_sync.c  ntp_sync.h  web_api.c  web_api.h
